Update email contact and improve payment policy clarity
- Changed the application email address in the Spanish about page to a more appropriate support email.
- Removed unnecessary import in the Portuguese about page for cleaner code.
- Updated language for clarity and consistency in payment policies across multiple languages, including adjustments to refund and payment processing descriptions.

--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -211,6 +211,6 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       description: 'Conéctese con pares para colaboración, aprendizaje y apoyo.',
     },
   ]}
-  applyUrl="mailto:patimota@gmail.com?subject=Solicitud%20para%20Eleva%20Care&body=Hola%20Patrícia,%20me%20gustaría%20solicitar%20unirme%20a%20Eleva%20Care."
+  applyUrl="mailto:support@eleva.care?subject=Solicitud%20para%20Eleva%20Care&body=Hola%20equipo%20Eleva,%20me%20gustaría%20solicitar%20unirme%20a%20Eleva%20Care."
   applyButtonText="Solicitar Unirse"
 />
