--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -25,15 +25,15 @@ Exemplo €100: Profissional €85, Taxa de plataforma €15.
 - Você tem 7 dias completos para concluir o pagamento
 - Enviaremos lembretes no dia 3 e no dia 6 com instruções (caixa eletrônico, internet banking, MB WAY)
 
-Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do profissional, reembolsamos automaticamente 90% (retenção de 10% como taxa de processamento).
+Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do profissional, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento.
 
 ## 4) Reembolsos por conflitos (Multibanco tardio)
 
-- Reembolso automático: 90% devolvido, 10% retido como processamento
+- Reembolso automático: 90% devolvido e 10% retido como taxa de processamento
 - Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
 - Notificamos por e‑mail
 
-Se houver erro do sistema ou caso especial, contate o suporte em 48h com sua referência; analisamos em 2 dias úteis.
+Se houver erro do sistema ou caso especial, contate o suporte em 48 h com sua referência; analisamos em 2 dias úteis.
 
 ## 5) Escolha do método de pagamento
 
@@ -67,7 +67,7 @@ Se houver erro do sistema ou caso especial, contate o suporte em 48h com sua ref
 
 ## 10) Suporte e reembolsos
 
-- Pagamentos: `support@eleva.care` (meta de resposta em 24h)
+- Pagamentos: `support@eleva.care` (meta de resposta em 24 h)
 - Reembolsos: solicite em até 7 dias do pagamento; emergências médicas caso a caso; cancelamentos conforme nossos Termos
 
 ## 11) Atualizações e conformidade
