--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -25,15 +25,15 @@ Example for €100: Practitioner €85, Platform fee €15.
 - You have 7 full days to complete payment
 - We’ll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
-Late Multibanco payments (after 7 days): If the slot is no longer available or violates practitioner rules, we automatically refund 90% (retain 10% processing fee).
+Late Multibanco payments (after 7 days): If the slot is no longer available or violates practitioner rules, we automatically refund 90% and retain a 10% processing fee.
 
 ## 4) Refunds for conflicts (late Multibanco)
 
 - Automatic refund: 90% back, 10% retained as processing fee
 - Refund time: typically 5–10 business days (via Stripe)
-- We’ll notify you by email
+- We’ll notify you by email.
 
-If something went wrong (system error or edge case), contact support within 48 hours with your payment reference; we’ll review within 2 business days.
+If something went wrong (system error or edge case), contact support within 48 hours with your payment reference. We’ll review within 2 business days.
 
 ## 5) Choosing a payment method
 
@@ -51,7 +51,7 @@ If something went wrong (system error or edge case), contact support within 48 h
 ## 7) Currency and pricing
 
 - Prices shown in EUR; processors may apply conversion for international cards
-- Prices are locked at booking; no extra charges after confirmation
+- Prices are locked at booking; no extra platform fees after confirmation (refund fees may apply as described in section 4)
 - Taxes/fees included in the displayed price
 
 ## 8) Payment security and fraud
