--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -25,15 +25,15 @@ Ejemplo €100: Profesional €85, Tarifa de plataforma €15.
 - Tiene 7 días completos para completar el pago
 - Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
-Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del profesional, reembolsamos automáticamente el 90% (retenemos 10% como tarifa de procesamiento).
+Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del profesional, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento.
 
 ## 4) Reembolsos por conflictos (Multibanco tardío)
 
-- Reembolso automático: 90% devuelto, 10% retenido como procesamiento
+- Reembolso automático: 90% devuelto y 10% retenido como tarifa de procesamiento
 - Plazo de reembolso: normalmente 5–10 días hábiles (vía Stripe)
-- Le notificaremos por email
+- Le notificaremos por correo electrónico
 
-Si hubo un error del sistema o caso especial, contacte soporte dentro de 48h con su referencia; revisamos en 2 días hábiles.
+Si hubo un error del sistema o caso especial, contacte con soporte dentro de 48 h con su referencia; revisamos en 2 días hábiles.
 
 ## 5) Elegir método de pago
 
@@ -50,7 +50,7 @@ Si hubo un error del sistema o caso especial, contacte soporte dentro de 48h con
 
 ## 7) Moneda y precios
 
-- Precios en EUR; puede aplicar conversión para tarjetas internacionales
+- Precios en EUR; el procesador puede aplicar conversión para tarjetas internacionales
 - Precios se fijan al reservar; no hay cargos extra tras la confirmación
 - Impuestos/tasas incluidos en el precio mostrado
 
@@ -67,7 +67,7 @@ Si hubo un error del sistema o caso especial, contacte soporte dentro de 48h con
 
 ## 10) Soporte y reembolsos
 
-- Pagos: `support@eleva.care` (objetivo de respuesta en 24h)
+- Pagos: `support@eleva.care` (objetivo de respuesta en 24 h)
 - Reembolsos: solicítelos dentro de 7 días del pago; emergencias médicas caso por caso; cancelaciones según nuestros Términos
 
 ## 11) Actualizaciones y cumplimiento
