--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -18,35 +18,35 @@ Exemplo €100: Profissional €85, Taxa de plataforma €15.
 - Cartões (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3) Regras Multibanco (quando paga com 8+ dias de antecedência)
+## 3) Regras do Multibanco (quando paga com 8+ dias de antecedência)
 
 - Não disponível para consultas que ocorram em ≤8 dias
 - Se a consulta for em 8+ dias, reservamos o horário por 7 dias enquanto paga
 - Tem 7 dias completos para concluir o pagamento
-- Enviamos lembretes no dia 3 e dia 6 com instruções (ATM, homebanking, MB WAY)
+- Enviamos lembretes no dia 3 e no dia 6 com instruções (ATM, homebanking, MB WAY)
 
-Pagamentos Multibanco tardios (após 7 dias): se o horário já não estiver disponível ou violar regras do profissional, reembolsamos automaticamente 90% (retenção de 10% como taxa de processamento).
+Pagamentos Multibanco tardios (após 7 dias): se o horário já não estiver disponível ou violar regras do profissional, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento.
 
 ## 4) Reembolsos por conflitos (Multibanco tardio)
 
-- Reembolso automático: 90% devolvido, 10% retido como processamento
+- Reembolso automático: 90% devolvido e 10% retido como taxa de processamento
 - Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
-- Notificamos por email
+- Notificamos por e‑mail
 
-Se houve erro do sistema ou caso excecional, contacte o suporte em 48h com a referência; analisamos em 2 dias úteis.
+Se houve erro do sistema ou caso excecional, contacte o suporte em 48 h com a referência; analisamos em 2 dias úteis.
 
 ## 5) Escolher método de pagamento
 
 - Cartão (instantâneo):
   - Melhor para consultas em ≤8 dias, última hora, ou quando precisa de confirmação imediata
 - Multibanco (janela de 7 dias):
-  - Melhor para 8+ dias, preferência local PT e pagamento diferido
+  - Melhor para 8+ dias, preferência local PT, e pagamento diferido
 
 ## 6) Pagamentos a profissionais (Stripe Connect)
 
 - Profissionais são independentes e recebem via Stripe Connect após consultas concluídas
 - Divisão padrão: 85% profissional / 15% plataforma
-- O timing depende das definições do profissional e do banco
+- O prazo depende das definições do profissional e do banco
 
 ## 7) Moeda e preços
 
@@ -57,7 +57,7 @@ Se houve erro do sistema ou caso excecional, contacte o suporte em 48h com a ref
 ## 8) Segurança e fraude
 
 - Não guardamos números de cartão; Stripe processa (PCI DSS)
-- Cifra e deteção de fraude; transações suspeitas podem atrasar/ser recusadas
+- Encriptação e deteção de fraude; transações suspeitas podem atrasar/ser recusadas
 - Verificação adicional pode ser exigida em pagamentos de alto valor
 
 ## 9) Pagamentos falhados
@@ -67,7 +67,7 @@ Se houve erro do sistema ou caso excecional, contacte o suporte em 48h com a ref
 
 ## 10) Suporte e reembolsos
 
-- Pagamentos: `support@eleva.care` (objetivo de resposta em 24h)
+- Pagamentos: `support@eleva.care` (objetivo de resposta em 24 h)
 - Reembolsos: solicite em até 7 dias; emergências médicas caso a caso; cancelamentos conforme os Termos
 
 ## 11) Atualizações e conformidade
